01.12.2010
        - Ported listedit. (Orcan)
        - I missed to port one action call in drumedit. Now it's (hopefully) done. (Orcan)
30.11.2010
        - Ported vscale and ctrledit. (Orcan)
29.11.2010
        - In Mess::processEvent(), added ME_PITCHBEND case. For synths which don't override 
           processEvent (like Vam and Deicsonze). Pitchbend should work in them now. (Tim)
        - Added a new HeaderNew (Qt4 based) class to be used instead of Header (Qt3 based). (Orcan)
        - Ported drumedit except a Q3PopupMenu reference that needs to be ported in midiport.cpp.
          This update restores the tooltips, adds icons to edit menu items in drumedit window. (Orcan)
28.11.2010
        - Finished porting Marker View. (Orcan)
        - Ported ctrlpanel. Needs some testing. I also removed usage of the Oxygen's "pen" icon
          in place of the pencil. The pen looks bad in ctrlpanel. (Orcan)
        - Deicsonze2 added (!!) Fresh re-import from evolution. Test OK. (Tim)
          TODO: Plugin controllers disabled - we need the Ctrl class. 
                Restoring of state (that's a MusE problem I think).   
                Fix deicsonze.cpp:3612: warning: deprecated conversion from string constant to ‘char*’
        - Ported Mastertrack list view. (Orcan)
        - Finished porting of Canvas module. Should be done. Not sure about one mouse event buttons() usage. (Tim)
27.11.2010
        - Completed porting pianoroll module including menus, shortcuts. Should be done. (Tim)
        - Ported the following .ui widgets to Qt4: organguibase, gatetime, midisync,
          routedialogbase, vamguibase, 1050, 2142. (Orcan)
        - Fixed the whatsthis and tooltip bits of tho Midi Ports dialog. (Orcan)
        - Ported Quant Config dialog. (Orcan)
        - Ported the popup menus in the canvas. This should restore the color selection of tracks. (Orcan)
        - Removed midiportroutebase.ui, fdialogbase.ui (the one from organ) (Orcan)