@@ -1,6 +1,7 @@
 01.12.2010
         - Ported listedit. (Orcan)
         - I missed to port one action call in drumedit. Now it's (hopefully) done. (Orcan)
+        - Ported midiport. This also finishes the port of dlist. (Orcan)
 30.11.2010
         - Ported vscale and ctrledit. (Orcan)
 29.11.2010
